# language-translator

./: .env.example  .gitignore  Makefile  db.py  docker-compose.yml  gunicorn.conf.py  main.py  models.py  pyproject.toml  settings.py
.github/workflows/: ci.yml
migrations/: README  script.py.mako
translator_service/: README.md  logger.py  main.py  pyproject.toml  settings.py
utils/: logger.py
