[project]
name = "language-converter"
version = "0.1.0"
description = "Simple application to convert Japanese Language to English"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.10.1",
    "python-json-logger>=3.3.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "mypy==1.17.0",
    "ruff==0.12.3",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff.lint]
ignore = ["E501"]
extend-select = ["E", "I", "F", "G", "N", "T201"]
